@@ -8,8 +8,3 @@ included in the "htdocs" directory.
 
 If you are upgrading from an earlier release of TMDA, make sure to
 consult the `UPGRADE' file.
-
-To report success: (from a TMDA user's account, not root)
-  % ( python -c 'from TMDA.Defaults import *; print DELIVERY_AGENT' ) \
-    | mail jason-tmdausage@mastaler.com
-
