@@ -51,6 +51,5 @@ RPM are available.
 # rpm -Uvh /usr/src/redhat/RPMS/noarch/tmda-0.01-1.noarch.rpm
 
 </pre></blockquote>
-
 </ul>
 
