@@ -1,3 +1,7 @@
+2001-11-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* INSTALL: Move success reporting info to config-server.html.
+
 2001-10-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* README: TMDA 0.39 is released.
